2017-10-06  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start_args): Remove hostip and fqdn elements.
	(attack_network, attack_start): Move hostname resolving and reverse
	resolving from main scan process to the spawned host process.

2017-10-05  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/pcap.c (v6_get_mac_addr): Remove function.

	* misc/pcap_openvas.h: Remove function header.

	* src/attack.c (struct attack_start_args): Remove host_mac_addr element.
	(attack_start): Remove host_mac_addr check.
	(attack_network): Remove handling of unused use_mac_addr preference.

2017-10-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/pcap.c (get_random_bytes): Remove function.
	(v6_getsourceip): Use rand() instead of get_random_bytes().

2017-09-29  Michael Wiegand <michael.wiegand@greenbone.net>

	Address documentation issues.

	* nasl/nasl_grammar.y: Add missing parameter documentation.

	* src/attack.c: Remove documentation of non-existing parameters.

	* src/ntp.c: Correct parameter name.

	* src/openvassd.c: Remove documentation of non-existing parameters.
	Add missing parameter documentation.

	* src/plugs_req.c: Replace non-existing reference with more
	appropriate Doxygen command.

2017-09-28  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (check_kb_status): Call kb_lnk_reset() to close
	redis connection, to avoid the increase of connections and to reach
	the maximum.

2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/openvassd.c (check_kb_status): New function. Check if Redis
	Server is up and if the KB exists. If KB does not exist force a reload.
	(main_loop): Call new function.

2017-09-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Set EXTRACT_PRIVATE and
	EXTRACT_STATIC to YES to ensure documentation is also generated for
	items Doxygen considers 'private' or 'static'.
